--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^6.1.0",
     "git": "^0.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
